Various changes; this is the first commit after git nearly killed PokEditor in October 2021
Signed-off-by: turtleisaac <turtleisaac1@gmail.com>